more good work done

--- a/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-artists.phtml
+++ b/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-artists.phtml
@@ -35,7 +35,7 @@
 	.catalog-category-view.page-layout-1column .column.main,
 	.page-layout-1column.page-with-filter .column.main{padding-top:3px;padding-bottom:141px;}
 	body{background:url('https://images-assets.nasa.gov/image/6900588/6900588~orig.jpg');}
-	.button-quickview{padding:0px;background:#ff5314;}
+	.button-quickview{padding:0px;background:#fff;}
 	.page-footer,
 	.page-header .panel.wrapper{display:none;}
 	
