--- a/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-artists.phtml
+++ b/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-artists.phtml
@@ -7,7 +7,7 @@
 	.sections.nav-sections,
 	.page-layout-1column .filter.block,
 	.modal-header,.modal-footer,.copyright,.page-title-wrapper,.category-view{display:none;}
-	.modal-popup .modal-content{padding:1rem !important;}
+	.modal-popup .modal-content{padding:0px !important;}
 	.product-quickview {
 	  overflow: hidden;
 	  padding-top: 56.25%;
