--- a/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-albums.phtml
+++ b/code/ArchiveDotOrg/Player/view/frontend/templates/product/list-albums.phtml
@@ -7,7 +7,7 @@
 	.sections.nav-sections,
 	.page-layout-1column .filter.block,
 	.modal-header,.modal-footer,.copyright,.page-title-wrapper{display:none;}
-	.modal-popup .modal-content{padding:1rem !important;}
+	.modal-popup .modal-content{padding:0px !important;}
 	.product-quickview {
 	  overflow: hidden;
 	  padding-top: 56.25%;
@@ -23,6 +23,15 @@
 	   width: 100%;
 	}
 	.category-image img{margin:auto;}
+	#maincontent{padding:0px;margin:0px;max-width:none;}
+	.maincontent{height:100%;}
+	.category-view{height:100%;width:25%;float:left;background:#000;}
+	.category-view img {width: 75%;margin: auto;background: #fff;padding: 3%;border: 1px #000 solid;border-radius: 5px;margin-top:5%;}
+	.columns{width:75%;float:left;background: cornsilk;}
+	.columns .column.main{background: cornsilk;margin: auto;padding: 1%;width:95%;}
+	body{background:darkcyan;}
+	button.slick-prev.slick-arrow{box-shadow:none;}
+	.block-promo{display: block;border: solid 1px #fff;padding: 3%;background: #000;border-radius: 15px;color: #fff;width:85%;}
 </style>
 <?php
 $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
@@ -30,7 +39,7 @@ $category = $objectManager->get('Magento\Framework\Registry')->registry('current
 $subcats = $category->getChildrenCategories();
 $_helper = $this->helper('Magento\Catalog\Helper\Output');
 ?>
-<ul style="padding: 0px;float: left;width: 100%">
+<div class="theslick">
 	<?php
 	$_four_count = 0;
 	foreach ($subcats as $subcat) {
@@ -47,18 +56,32 @@ $_helper = $this->helper('Magento\Catalog\Helper\Output');
 				$_all_data = $_category->getProductCollection()->addAttributeToSelect('*');
 				foreach($_all_data as $_a_show){
 					$_show_count[]= $_a_show->getIdentifier();
-				}
-				/* @escapeNotVerified */
-				echo '<li style="list-style-type: none;width:24%;margin-right:1%;float:left;text-align:center;"><a href="' . $subcaturl . '
-				" class="block-promo" title="' . $subcat->getName() . '">'.$subcat->getName().'<br/>' .$_imgHtml.'<br/>'. count($subcat->getProductCollection()->addAttributeToSelect('entity_id'))  . ' recordings from '. count(array_unique($_show_count)).' shows
-				</a></li>';
-				if($_four_count == 4){
-					echo '<li style="clear:both;"></li>';
-					$_four_count = 0;
-				}
+				}		
+				echo '<div style="text-align:center;"><a href="' . $subcaturl . '
+				" class="block-promo" title="' . $subcat->getName() . '">'.$subcat->getName() .$_imgHtml. count($subcat->getProductCollection()->addAttributeToSelect('entity_id'))  . ' recordings from '. count(array_unique($_show_count)).' shows</a></div>';
 			}
 		}
 	} ?>
-</ul>
+</div>
 
    
+
+
+
+
+<script>
+    require([
+        'jquery',
+        'slick'
+    ], function ($) {
+        jQuery(document).ready(function () {
+            jQuery(".theslick").slick({
+                dots: true,
+                infinite: true,
+                speed: 300,
+                slidesToShow: 4,
+                slidesToScroll: 1
+            });
+        });
+    });
+</script>
